BifurcatedGraphicsContext doesn't bifurcate draw{Tiled}Image https://bugs.webkit.org/show_bug.cgi?id=231385 <rdar://problem/83922633>

Reviewed by Devin Rousso.

Source/WebCore:

New API Test: BifurcatedGraphicsContextTests.DrawGradientImage, DrawTiledGradientImage

* WebCore.xcodeproj/project.pbxproj:
* platform/graphics/GradientImage.h:
Export GradientImage's constructor and GradientImage and GeneratedImage headers.

* platform/graphics/BifurcatedGraphicsContext.cpp:
(WebCore::BifurcatedGraphicsContext::drawTiledImage):
(WebCore::BifurcatedGraphicsContext::drawImage):
(WebCore::BifurcatedGraphicsContext::drawImageForCanvas):
* platform/graphics/BifurcatedGraphicsContext.h:
Forward draw{Tiled}Image to both GraphicsContext instances.

I had initially avoided it because I assumed drawNativeImage would
be the eventual result, but because of the non-BitmapImage subclasses
that is actually not the case! For example, in the gradient case,
drawing the image results in GradientCG directly interacting with the
platform context, not round-tripping back through GraphicsContext,
so the commands are not replicated.

Tools:

* TestWebKitAPI/Tests/WebCore/cg/BifurcatedGraphicsContextTestsCG.cpp:
(TestWebKitAPI::TEST):
Add some test.


Canonical link: https://commits.webkit.org/242669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283747 268f45cc-cd09-0410-ab3c-d52691b4dbfc